--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Fanzora Fantasy Sports</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>Fanzora – Live Fantasy Contests</h1>
+  <button onclick="loadLiveScores()">Load Live Football Scores</button>
+  <pre id="output">Loading...</pre>
+  <script src="script.js"></script>
+</body>
+</html>
 
