--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     #leaderboard-list { list-style-type: none; padding-left: 0; }
     #leaderboard-list li { padding: 5px 0; border-bottom: 1px solid #444; }
     button { cursor: pointer; padding: 8px 12px; margin-top: 10px; border: none; border-radius: 4px; background: #00FF7F; color: #000; font-weight: bold; }
-    input, label { display: block; margin: 8px 0 4px; }
-    input[type="text"], input[type="date"] { width: 100%; padding: 8px; border-radius: 4px; border: 1px solid #444; background: #222; color: #eee; }
+    input, label, select { display: block; margin: 8px 0 4px; }
+    input[type="text"], input[type="date"], select { width: 100%; padding: 8px; border-radius: 4px; border: 1px solid #444; background: #222; color: #eee; }
     #auth-message { color: #f55; }
   </style>
 </head>
@@ -35,6 +35,16 @@
   <section id="main-app">
     <button onclick="logout()">Logout</button>
     <h1>Live Football Scores & Fantasy Points</h1>
+
+    <label for="league-select">Filter by League:</label>
+    <select id="league-select">
+      <option value="all">All Leagues</option>
+      <option value="140">La Liga</option>
+      <option value="2">Champions League</option>
+      <option value="39">Premier League</option>
+      <!-- Add more leagues if you want -->
+    </select>
+
     <button onclick="loadLiveScores()">Load Live Scores</button>
     <div id="scores-container"></div>
 
@@ -50,6 +60,7 @@
       const user = localStorage.getItem("fanzoraUser");
       if (user) {
         showApp();
+        loadLiveScores("all");
       }
 
       document.getElementById("auth-form").addEventListener("submit", (e) => {
@@ -72,6 +83,11 @@
 
         localStorage.setItem("fanzoraUser", username);
         showApp();
+        loadLiveScores("all");
+      });
+
+      document.getElementById("league-select").addEventListener("change", (e) => {
+        loadLiveScores(e.target.value);
       });
     };
 
@@ -108,8 +124,8 @@
       });
     }
 
-    // LOAD LIVE SCORES WITH FANTASY POINTS AND ERROR HANDLING
-    async function loadLiveScores() {
+    // LOAD LIVE SCORES WITH FANTASY POINTS AND LEAGUE FILTERING
+    async function loadLiveScores(leagueId = "all") {
       const container = document.getElementById("scores-container");
       container.innerHTML = "<p>Loading live matches and fantasy points...</p>";
 
@@ -130,10 +146,20 @@
           return;
         }
 
+        let matches = data.response;
+        if (leagueId !== "all") {
+          matches = matches.filter(match => match.league.id.toString() === leagueId);
+        }
+
+        if (matches.length === 0) {
+          container.innerHTML = `<p>No live matches for the selected league.</p>`;
+          return;
+        }
+
         container.innerHTML = '';
         const username = localStorage.getItem("fanzoraUser") || "Guest";
 
-        for (const match of data.response) {
+        for (const match of matches) {
           let homePoints = 0;
           let awayPoints = 0;
 
@@ -156,12 +182,10 @@
               });
             }
           } catch (e) {
-            console.warn(`No player stats for fixture ${match.fixture.id}`, e);
             homePoints = 0;
             awayPoints = 0;
           }
 
-          // Update leaderboard with total points from this match
           updateLeaderboard(username, homePoints + awayPoints);
 
           const card = document.createElement("div");
@@ -184,6 +208,7 @@
   </script>
 </body>
 </html>
+
 
 
 
