--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
       box-shadow: 0 0 20px #00FF7F;
       animation: pulse 2s infinite;
     }
-    .features {
+    .features, .scores {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2em;
       padding: 60px 20px;
     }
-    .feature {
+    .feature, .score-card {
       background: #1A1A1A;
       padding: 2em;
       border-radius: 20px;
@@ -93,6 +93,11 @@
       padding: 2em;
       text-align: center;
       color: #A0A0A0;
+    }
+    select {
+      padding: 0.5em;
+      border-radius: 8px;
+      margin: 1em;
     }
 
     @keyframes fadeInUp {
@@ -156,6 +161,15 @@
     </div>
   </section>
 
+  <section style="text-align:center; padding: 40px;">
+    <h2>Live Scores</h2>
+    <select id="sport-select">
+      <option value="football">Football</option>
+      <option value="basketball">Basketball</option>
+    </select>
+    <div id="scores" class="scores"></div>
+  </section>
+
   <footer>
     &copy; 2024 Fanzora. All rights reserved.
   </footer>
@@ -169,9 +183,60 @@
         alert("Welcome to Fanzora!");
       }
     }
+
+    const scoresDiv = document.getElementById('scores');
+    const select = document.getElementById('sport-select');
+    const apiKey = 'YOUR_API_KEY'; // Replace with your real key
+
+    async function loadScores() {
+      const sport = select.value;
+      let url = '';
+      let headers = {};
+
+      if (sport === 'football') {
+        url = 'https://api-football-v1.p.rapidapi.com/v3/fixtures?live=all';
+        headers = {
+          'X-RapidAPI-Key': apiKey,
+          'X-RapidAPI-Host': 'api-football-v1.p.rapidapi.com'
+        };
+      } else if (sport === 'basketball') {
+        url = 'https://api-basketball.p.rapidapi.com/games?live=all';
+        headers = {
+          'X-RapidAPI-Key': apiKey,
+          'X-RapidAPI-Host': 'api-basketball.p.rapidapi.com'
+        };
+      }
+
+      try {
+        const res = await fetch(url, { headers });
+        const data = await res.json();
+        scoresDiv.innerHTML = '';
+        if (data.response && data.response.length > 0) {
+          data.response.forEach(match => {
+            const card = document.createElement('div');
+            card.className = 'score-card';
+            card.innerHTML = `
+              <h3>${match.teams?.home?.name || match.teams?.visitors?.name} vs ${match.teams?.away?.name || match.teams?.home?.name}</h3>
+              <p>Score: ${match.goals?.home ?? match.scores?.home?.points} - ${match.goals?.away ?? match.scores?.away?.points}</p>
+              <p>Status: ${match.status?.long || match.status?.description}</p>
+            `;
+            scoresDiv.appendChild(card);
+          });
+        } else {
+          scoresDiv.innerHTML = '<p>No live games at the moment.</p>';
+        }
+      } catch (e) {
+        scoresDiv.innerHTML = '<p>Error loading scores.</p>';
+        console.error(e);
+      }
+    }
+
+    select.addEventListener('change', loadScores);
+    window.addEventListener('load', loadScores);
   </script>
 </body>
 </html>
+
 
 
 
