--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     .hero {
       text-align: center;
       padding: 100px 20px;
-      background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://placehold.co/1920x1080') center/cover;
+      background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://placehold.co/1920x1080?text=1920x1080+Hero+Image') center/cover;
     }
     .hero h1 {
       font-size: 3em;
@@ -236,6 +236,7 @@
   </script>
 </body>
 </html>
+
 
 
 
